--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 :root {
   --default-font-family: "Poppins", sans-serif;
-  --body-bg-color: #f5afa7;
+  --body-bg-color: #f6cfcb;
   --default-text-color: #333;
   --base-separation: 1rem;
   --half-separation: calc(var(--base-separation) / 2);
